trunk/Archive2/28/b8828237fc052c/output
main.cpp:39:18: error: invalid operands to binary expression ('const Y::X::B<1, true>' and 'const Y::X::B<1, true>')
        return L != R;
               ~ ^  ~
main.cpp:46:8: note: in instantiation of function template specialization 'main()::(anonymous class)::operator()<Y::X::B<1, true>, Y::X::B<1, true> >' requested here
    lam(b1, b2);
       ^
1 error generated.
